--- a/ExamSolution/ExamApp/Views/Contests/Create.html
+++ b/ExamSolution/ExamApp/Views/Contests/Create.html
@@ -10,7 +10,7 @@
                 <form method="post">
 
                     <div class="form-group row">
-                        <label class="col-form-label" for="email"><strong>Contest Name</strong></label>
+                        <label class="col-form-label" for="name"><strong>Contest Name</strong></label>
                         <input required name="Name" type="text" class="form-control" id="name" />
                     </div>
 
