--- a/ExamApp/ExamApp.Web/Views/Users/Login.html
+++ b/ExamApp/ExamApp.Web/Views/Users/Login.html
@@ -1,33 +1,12 @@
-﻿<main>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col col-md-6">
-                <div class="text-center">
-                    <h1 class="display-3">Login</h1>
-                </div>
-                <hr />
-
-                <form method="post">
-
-                    <div class="form-group row">
-                        <label class="col-form-label" for="email">Email</label>
-                        <input required name="Email" type="email" class="form-control" id="email" placeholder="exampleName@example.bg" />
-                    </div>
-
-                    <div class="form-group row">
-                        <label class="col-form-label" for="password">Password</label>
-                        <input required name="Password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" id="password" class="form-control" placeholder="Password" />
-                    </div>
-
-                    <div>
-                        <input name="RememberMe" type="checkbox" id="confirmTerms" class="checkbox-inline">      
-                        <label class="checkbox-inline" for="confirmTerms"><strong>Remember me</strong></label>    
-                    </div>
-
-                    <input type="submit" class="btn col btn-outline-dark" value="Login" />
-                </form>
-                <br />
-            </div>
-        </div>
-    </div>
+﻿
+<main>
+    <h2>Log In:</h2>
+    <form method="post">
+        <label>Email:</label>
+        <input name="Email" type="email" placeholder="Enter your Email" >
+        <label>Password:</label>
+        <input name="Password" type="password" placeholder="Enter your Password">
+        <input type="submit" class="login" value="Login">
+    </form>
+    <footer>SoftUni Airlines</footer>
 </main>
