--- a/ExamApp/ExamApp.Web/Views/Users/Register.html
+++ b/ExamApp/ExamApp.Web/Views/Users/Register.html
@@ -1,42 +1,15 @@
 ﻿<main>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col col-md-6">
-                <div class="text-center">
-                    <h1 class="display-3">Register</h1>
-                </div>
-                <hr />
-
-                <form method="post">
-
-                    <div class="form-group row">
-                        <label class="col-form-label" for="email">Email</label>
-                        <input required name="Email" type="email" class="form-control" id="email" placeholder="exampleName@example.bg" />
-                    </div>
-                    <div class="form-group row">
-                        <label class="col-form-label" for="password">Password</label>
-                        <input required name="Password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" id="password" class="form-control" placeholder="Password" />
-                    </div>
-
-                    <div class="form-group row">
-                        <label class="col-form-label" for="confirm-password">Confirm Password</label>
-                        <input required name="ConfirmPassword" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" id="confirm-passworn" class="form-control" placeholder="Confirm Password" />
-                    </div>
-
-                    <div class="form-group row">
-                        <label class="col-form-label" for="fullName">Full Name</label>
-                        <input required name="FullName" type="text" class="form-control" id="email" placeholder="Example Ivanov" />
-                    </div>
-
-                    <div class="item">                      
-                        <input required name="ConfirmTerms" type="checkbox"  id="confirmTerms" class="checkbox-inline" />
-                        <label class="checkbox-inline"  for="confirmTerms"><strong>I agree with the official Terms and Conditions</strong></label>
-                    </div>
-
-                    <input type="submit" class="btn col btn-outline-dark" value="Register" />
-                </form>
-                <br />
-            </div>
-        </div>
-    </div>
+    <h2>Create your accout:</h2>
+    <form method="post">
+        <label>Name:</label>
+        <input name="Name" type="text" placeholder="Name" >
+        <label>Email:</label>
+        <input name="Email" type="email" placeholder="Email">
+        <label>Password:</label>
+        <input name="Password" type="password" placeholder="Password">
+        <label>Repeat Password:</label>
+        <input name="RepeatPassword" type="password" placeholder="Repeat Password">
+        <input type="submit" class="register" value="Register">        
+    </form>
+    <footer>SoftUni Airlines</footer>
 </main>
